@@ -707,19 +707,25 @@
 	return [self convertToWorldSpace:nodePoint];
 }
 
+- (CGPoint)convertToWindowSpace:(CGPoint)nodePoint
+{
+    CGPoint worldPoint = [self convertToWorldSpace:nodePoint];
+	return [[Director sharedDirector] convertToUI:worldPoint];
+}
+
 // convenience methods which take a UITouch instead of CGPoint
 
 - (CGPoint)convertTouchToNodeSpace:(UITouch *)touch
 {
 	CGPoint point = [touch locationInView: [touch view]];
-	point = [[Director sharedDirector] convertCoordinate: point];
+	point = [[Director sharedDirector] convertToGL: point];
 	return [self convertToNodeSpace:point];
 }
 
 - (CGPoint)convertTouchToNodeSpaceAR:(UITouch *)touch
 {
 	CGPoint point = [touch locationInView: [touch view]];
-	point = [[Director sharedDirector] convertCoordinate: point];
+	point = [[Director sharedDirector] convertToGL: point];
 	return [self convertToNodeSpaceAR:point];
 }
 
